# parakeet

./: Cargo.toml  README.md
src/: lib.rs  page_props.rs  rendering_engine.rs
src/browser/: mod.rs  result.rs  t_log.rs  ticket.rs
src/browser/containers/: browser.rs  mod.rs  tab.rs
