[package]
name = "chrome_html_to_pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
env_logger = "0.10.0"
headless_chrome = "1.0.5"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["time", "sync"] }
url = "2.3.1"
