[package]
name = "parakeet_pdf"
version = "0.1.3"
edition = "2021"
authors = ["Maxim Kozlov <kozlov.maxim.m@gmail.com>"]
description = "Chrome based HTML to PDF renderer"
repository = "https://github.com/Sebekerga/parakeet"

[dependencies]
derive_builder = "0.12.0"
env_logger = "0.10.0"
headless_chrome = "1.0.5"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["time", "sync"] }
url = "2.3.1"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
